--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -26,21 +26,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-                android:id="@+id/fastRecordIcon"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+        <ImageButton
+                android:id="@+id/recordButton"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:src="@drawable/ic_baseline_fiber_manual_record_24"
+                android:background="@drawable/button_background"
+                android:contentDescription="@string/REC"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/textView2" />
+                app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fast_record"
-                app:layout_constraintTop_toBottomOf="@id/fastRecordIcon"
+                app:layout_constraintTop_toBottomOf="@id/recordButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
