--- a/app/src/main/res/drawable/ic_baseline_fiber_manual_record_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_fiber_manual_record_24.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+        android:width="64dp"
+        android:height="64dp"
+        android:viewportWidth="64"
+        android:viewportHeight="64">
   <path
-      android:fillColor="@color/soft_red"
-      android:pathData="M12,12m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0"/>
+          android:fillColor="#FF3D00"
+          android:pathData="M32,22a10,10 0 1,0 0,20a10,10 0 1,0 0,-20z"/>
 </vector>
