--- a/app/src/main/res/drawable/ic_baseline_pause_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_pause_24.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+        android:width="64dp"
+        android:height="64dp"
+        android:viewportWidth="64"
+        android:viewportHeight="64">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z"/>
+          android:fillColor="#FFFFFF"
+          android:pathData="M24,20h6v24h-6zM34,20h6v24h-6z"/>
 </vector>
