--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="black">#000000</color>
     <color name="soft_red">#FF5F5F</color>
     <color name="bright_green">#8FFF5F</color>
+    <color name="cool_blue">#00BCD4</color>
 </resources>
