--- a/app/src/main/res/layout/song_fragment.xml
+++ b/app/src/main/res/layout/song_fragment.xml
@@ -11,9 +11,9 @@
 
 
     <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:elevation="2dp"
             android:gravity="end"
             android:padding="5dp">
@@ -77,7 +77,7 @@
 
     </LinearLayout>
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
             android:id="@+id/audioControlsFragment"
             android:name="com.georgv.audioworkstation.ui.main.fragments.AudioControlsFragment"
             android:layout_width="match_parent"
